<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="d2_pin_prompt" type="id" />
    <item name="d2_pin_input" type="id" />
</resources>
